# grpc-polyglot-example

howto/: howto.sh
simple/: Gemfile  build.sh  client.sh  naive.sh  server.sh  setup.sh
simple/proto/: fib.proto
simple/ruby/: .gitignore  Gemfile  fib_client.rb  rubyfib.rb
simple/rust/: .gitignore  Cargo.toml
simple/rust/src/: fib_server.rs  lib.rs
webapp/rails-app/: .gitignore  Gemfile  build.sh  config.ru
webapp/rails-app/app/assets/stylesheets/: fibs.scss
webapp/rails-app/app/controllers/: fibs_controller.rb
webapp/rails-app/app/views/fibs/: index.html.erb
webapp/rails-app/app/views/layouts/: application.html.erb
webapp/rails-app/config/: application.rb  routes.rb  secrets.yml
webapp/rails-app/db/: schema.rb
webapp/rails-app/db/migrate/: 20171014163722_create_fibs.rb
webapp/rails-app/test/controllers/: fibs_controller_test.rb
webapp/rust/: Cargo.toml  build.rs
webapp/rust/src/: lib.rs
